--- a/style.css
+++ b/style.css
@@ -3,13 +3,13 @@
 
 body {
     font-family: "Barlow", sans-serif;
-    background-color: #6c757d;
+    background-color:aliceblue;
     line-height: 1.7;
 }
 
 .keyboard1  {
     font-size: 25px;
-    background-color: #6c757d; 
+    background-color:rgb(255, 254, 252); 
 }
 
 .row {
@@ -21,16 +21,16 @@ body {
 }
 
 h1 {
-    text-shadow: 4px -3px 6px rgba(68, 34, 68, 1);
+    text-shadow: 1px 1px 2px rgb(2, 30, 247);
 }
 
 textarea {
     width: 60%;
     height: 300px;
     font-size: 20px;
-    background-color: #333533;
-    color:rgb(246, 250, 231);
-    border: 2px solid rgb(153, 3, 156);
+    background-color: #d6edfb;
+    color:black;
+    border: 2px solid rgb(52, 68, 244);
     border-radius: 5px;
 }
 
@@ -47,7 +47,7 @@ textarea {
 
 .keyboard {
     font-size: 28px;
-    color: rgb(153, 3, 156);
+    color: rgb(154, 204, 251);
 }
 
 button {
